packages/neos-ui-containers/src/InsertModeSelector/style.module.css
.root {
    display: flex;
    align-items: center;
}

.label {
    @media(max-width: 720px) {
        display: none;
    }
}

.buttonGroup {
    margin-left: 4px;

    > button:first-child {
        border-top-left-radius: 2px;
        border-bottom-left-radius: 2px;
    }
    > button:last-child {
        border-top-right-radius: 2px;
        border-bottom-right-radius: 2px;
    }
    .intoButton {
        margin-left: 8px;
    }
    > button {
        padding: 0px 14px;

        > span {
            margin-left: 7px;
        }
    }

}

